--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "flowbite": "^2.5.2",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
